// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el funcionamiento de <GifExpertApp /> <GifExpertApp /> debe de mostrar una lista de categorias correctamente 1`] = `
<Fragment>
  <h1
    className="title animate__animated animate__fadeIn"
  >
    Gif Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One Punch"
    key="1271a043-b223-4d88-8b8f-0a8180fb4f8e"
  />
  <GifGrid
    category="Samurai X"
    key="fc0170fa-73b9-4705-8c78-a7d62bffe0f8"
  />
  <GifGrid
    category="Dragon Ball"
    key="fdd71d75-5dea-4443-a5aa-fe0c869bec29"
  />
</Fragment>
`;

exports[`Probando el funcionamiento de <GifExpertApp /> Probando que <GifExpertApp /> se renderiza correctamente 1`] = `
<Fragment>
  <h1
    className="title animate__animated animate__fadeIn"
  >
    Gif Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
